# obs

./: Makefile  bau.bat  bau.bats  bau.cmd  bau.in  bs_funcs.sh  msys-install.sh  ob-remove.sh  ob-set-defaults  ob-set-targets  obs.cmd  obs.in  obs_funcs.sh  uberbau
bau-defaults/: buildshim-osx  buildshim-ubu  buildshim-win
buildbot/: bslave.bat  fix-obs.sh  hw.sh  master-json-tool.pl  master.cfg  master.json  nuke.sh  purge.sh  run-bslave
ci/: do-install-deps.osx
debian/: changelog
tests/bau-meson/: meson.build  pcredemo_test.sh
tests/bau-meson/debian/: changelog  control  copyright  rules
